--- a/Curso Introdução/javascript.html
+++ b/Curso Introdução/javascript.html
@@ -5,5 +5,14 @@
         <meta charset="utf-8"> 
     </head>
     <body>
+        <!-- AULA 8 <button onclick="mensagem()">Clique aqui</button> -->
+        <!-- AULA 9<span id="mensagem">Olá mundo!</span>
+        <button onclick="mudaCor('blue')">Azul</button>
+        <button onclick="mudaCor('red')">Vermelho</button> -->
+        <!--AULA 10-->
+        <form>
+            <input type="text" name="nome" id="nome" placeholder="Insira seu nome aqui"> 
+            <input type="submit" onclick="valida()">
+        </form>
     </body>
 </html> 
