--- a/Introdução JQuery/jquery.html
+++ b/Introdução JQuery/jquery.html
@@ -4,8 +4,8 @@
     </head>
     <body>
         <footer>
-            <script type="javascript" src="jquery.js"></script>
-            <script type="javascript" src="script_jquery.js"></script>
+            <script src="jquery.js"></script>
+            <script src="script_jquery.js"></script>
         </footer>
     </body>
 </html>
