--- a/Curso HTML5/site.html
+++ b/Curso HTML5/site.html
@@ -3,21 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Glass</title>
-    <style>
-        body {
-        /* background-image: url(" imagem jpeg de um fundo) */
-        
-        }
-        /*  text-align: justify cria um ajuste desde o início
-            da frase, até o final
-            text-indent cria um espaçamento no início, dando ideia de
-            parágrafo
-        */
-        p { 
-            text-align: justify;
-            text-indent: 50px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/> 
 </head>
 <body>
 <div id="interface">
@@ -30,20 +16,28 @@
     <!-- A melhor forma de de diminuir uma imagem é pelo editor de imagem (ex: photoshop)
          e não diminuir ela simplesmente no html (pois ela não diminui a quantidade de tamanho)
          assim o site fica mais leve -->
-    <img src="(informar o caminho da imagem do home)"/>
-    Menu Principal
-    -Home
-    -Especificações
-    -Fotos
-    -Multimídia
-    -Fale conosco
+    <img src="imagens/google-home.png"/>
+
+<!-- Aqui é criado uma tag de navegação -->
+<nav>
+    <h1>Menu Principal</h1>
+    <!-- Aqui é usado uma tag de criação de lista -->
+    <ul>
+        <li>Home</li>
+        <li>Especificações</li>
+        <li>Fotos</li>
+        <li>Multimídia</li>
+        <li>Fale conosco</li>
+    </ul>
+</nav>
+
     </header>
 
     <hgroup>
-    <h3>Tecnologia >Inovações</h3>
-    <h1>Saiba tudo sobre o Google Home</h1>
-    <h2>Por Eduarda Vieira</h2>
-    <h3>Atualizado em 07/06</h3>
+        <h3>Tecnologia >Inovações</h3>
+        <h1>Saiba tudo sobre o Google Home</h1>
+        <h2>Por Eduarda Vieira</h2>
+        <h3>Atualizado em 07/06</h3>
     </hgroup>
 
     <!--
@@ -62,9 +56,12 @@
         Essa categoria de produtos é denominada também de alto-falantes Inteligentes, do inglês <i>“Smart Speakers”.</i>
     </p>
 
-<figure>
-    <img src="inserir imagem google home"/>
-    <figcaption>Google Home, a nova ideia da google</figcaption>
+<figure class="foto-legenda">
+    <img src="imagens/intro.jpg"/>
+    <figcaption>
+        <h3>Google Home</h3>
+        <p>a nova ideia da google</p>
+    </figcaption>
 </figure>
 
     <h2>Data de lançamento</h2>
