--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -23,18 +23,18 @@
     <h1>Menu Principal</h1>
     <!-- Aqui é usado uma tag de criação de lista -->
     <ul>
-        <li>Home</li>
-        <li>Especificações</li>
-        <li>Fotos</li>
-        <li>Multimídia</li>
-        <li>Fale conosco</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="specs.html">Especificações</a></li>
+        <li><a href="fotos.html">Fotos</a></li>
+        <li><a href="multimidia.html">Multimídia</a></li>
+        <li><a href="fale-conosco.html">Fale conosco</a></li>
     </ul>
 </nav>
 
     </header>
 
     <hgroup>
-        <h3>Tecnologia >Inovações</h3>
+        <h3>Tecnologia > Inovações</h3>
         <h1>Saiba tudo sobre o Google Home</h1>
         <h2>Por Eduarda Vieira</h2>
         <h3>Atualizado em 07/06</h3>
@@ -53,16 +53,17 @@
             <em> = tag para ênfase (deixa a palavra em itálico também)
         -->
         O Google Home é uma linha de produtos para assistência pessoal por controle de voz, criado pela Google.
-        Essa categoria de produtos é denominada também de alto-falantes Inteligentes, do inglês <i>“Smart Speakers”.</i>
+        Essa categoria de produtos é denominada também de alto-falantes Inteligentes, do inglês
+        <a href="https://store.google.com/?srp=/product/google_home" target="_blank">“Smart Speakers”</a>.
     </p>
 
-<figure class="foto-legenda">
-    <img src="imagens/intro.jpg"/>
-    <figcaption>
-        <h3>Google Home</h3>
-        <p>a nova ideia da google</p>
-    </figcaption>
-</figure>
+    <figure class="foto-legenda">
+        <img src="imagens/intro.jpg"/>
+        <figcaption>
+            <h3>Google Home</h3>
+            <p>a nova ideia da google</p>
+        </figcaption>
+    </figure>
 
     <h2>Data de lançamento</h2>
     <p>
