--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/> 
+    <link rel="stylesheet" href="_css/estilo.css"/> 
 </head>
 <body>
 <div id="interface">
@@ -19,7 +19,7 @@
     <img src="imagens/google-home.png"/>
 
 <!-- Aqui é criado uma tag de navegação -->
-<nav>
+<nav id="menu">
     <h1>Menu Principal</h1>
     <!-- Aqui é usado uma tag de criação de lista -->
     <ul>
