Formatação de interfaces

--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -16,7 +16,7 @@
     <!-- A melhor forma de de diminuir uma imagem é pelo editor de imagem (ex: photoshop)
          e não diminuir ela simplesmente no html (pois ela não diminui a quantidade de tamanho)
          assim o site fica mais leve -->
-    <img src="imagens/google-home.png"/>
+    <img id="icone" src="imagens/google-home.png"/>
 
 <!-- Aqui é criado uma tag de navegação -->
 <nav id="menu">
