--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -33,6 +33,7 @@
 
     </header>
 
+    <section id="corpo">
     <hgroup>
         <h3>Tecnologia > Inovações</h3>
         <h1>Saiba tudo sobre o Google Home</h1>
@@ -89,8 +90,17 @@
         Com um simples comando de voz, realiza tarefas como tocar música, responder suas perguntas, incluir entradas em sua agenda,
         iniciar vídeos em sua televisão e até controlar lâmpadas e eletrodomésticos de sua casa.
     </p>
+    
+    </section>
+    <aside id="lateral">
+        <h1>Outras notícias</h1>
+        <h2>Vídeo mais recente</h2>
+        AQUI ENTRA UM VIDEO
+    </aside>
 
-
+    <footer id="rodape">
+        <p>Copyright &copy; 2019 - by Eduarda Vieira </p>
+    </footer>
 </div>
 </body>
 </html>
