--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -46,7 +46,7 @@
         Outra forma de formatar é usando CSS:
         <h2 style="text-align: center">
     -->
-    <h2>O que é</h2>
+    <h1>O que é</h1>
     <p>
         <!--
             <b> = tag para negrito
@@ -66,26 +66,26 @@
         </figcaption>
     </figure>
 
-    <h2>Data de lançamento</h2>
+    <h1>Data de lançamento</h1>
     <p>
         O Google Home foi anunciado em novembro 2016 nos Estados Unidos e,
         teve lançamentos subsequentes globalmente ao longo de 2017.
     </p>
 
-    <h2>Especificações Técnicas</h2>
-    <p>
-        O modelo original do Google Home é um alto-falante cilíndrico com 5,62  polegadas (143 milímetros) de altura,
-        e 3,79  polegadas (96 milímetros) de diâmetro. Possui controles de toque capacitivos para iniciar ou pausar
-        a música e ajustar o volume.
-    </p>
-
-    <h2>Como funciona</h2>
+    <h1>Especificações Técnicas</h1>
+    <table id="tabelaspec">
+        <caption>Tabela Técnica do Google Home Jun/2019</caption>
+        <tr><td>Tipo:</td> <td>Alto falante cilíndrico </td></tr>
+        <tr><td>Altura:</td> <td>5,62 polegadas (143 milímetros)</td></tr>
+        <tr><td>Diâmetro:</td> <td>3,79 polegadas (96 milímetros)</td></tr>
+    </table>
+    <h1>Como funciona</h1>
     <p>
         O alto-falante Google Home permite que os usuários falem comandos de voz para interagir com os serviços do 
         Google por meio do assistente pessoal do Google, chamado Google Assistente.
     </p>
 
-    <h2>O que você pode fazer com o Google Home</h2>
+    <h1>O que você pode fazer com o Google Home</h1>
     <p>
         Com um simples comando de voz, realiza tarefas como tocar música, responder suas perguntas, incluir entradas em sua agenda,
         iniciar vídeos em sua televisão e até controlar lâmpadas e eletrodomésticos de sua casa.
