Estilo Css para tabela

--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -74,10 +74,10 @@
 
     <h1>Especificações Técnicas</h1>
     <table id="tabelaspec">
-        <caption>Tabela Técnica do Google Home Jun/2019</caption>
-        <tr><td>Tipo:</td> <td>Alto falante cilíndrico </td></tr>
-        <tr><td>Altura:</td> <td>5,62 polegadas (143 milímetros)</td></tr>
-        <tr><td>Diâmetro:</td> <td>3,79 polegadas (96 milímetros)</td></tr>
+        <caption>Tabela Técnica do Google Home <span>Jun/2019</span></caption>
+        <tr><td class="ce">Tipo:</td> <td class="cd">Alto falante cilíndrico </td></tr>
+        <tr><td class="ce">Altura:</td> <td class="cd">5,62 polegadas (143 milímetros)</td></tr>
+        <tr><td class="ce">Diâmetro:</td> <td class="cd">3,79 polegadas (96 milímetros)</td></tr>
     </table>
     <h1>Como funciona</h1>
     <p>
