--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8"/>
-    <title>Tudo sobre Google Glass</title>
+    <title>Tudo sobre Google Home</title>
     <link rel="stylesheet" href="_css/estilo.css"/> 
 </head>
 <body>
@@ -16,7 +16,7 @@
     <!-- A melhor forma de de diminuir uma imagem é pelo editor de imagem (ex: photoshop)
          e não diminuir ela simplesmente no html (pois ela não diminui a quantidade de tamanho)
          assim o site fica mais leve -->
-    <img id="icone" src="imagens/google-home.png"/>
+    <img id="icone" src="imagens/imagem-duda (5).png"/>
 
 <!-- Aqui é criado uma tag de navegação -->
 <nav id="menu">
@@ -34,19 +34,21 @@
     </header>
 
     <section id="corpo">
+    <article id="noticia-principal">
+<header id= "cabecalho-artigo">
     <hgroup>
         <h3>Tecnologia > Inovações</h3>
         <h1>Saiba tudo sobre o Google Home</h1>
         <h2>Por Eduarda Vieira</h2>
-        <h3>Atualizado em 07/06</h3>
+        <h3 class="direita">Atualizado em 07/06</h3>
     </hgroup>
-
+</header>
     <!--
         <h2 align="center"> está depreciada no Html5
         Outra forma de formatar é usando CSS:
         <h2 style="text-align: center">
     -->
-    <h1>O que é</h1>
+    <h2>O que é</h2>
     <p>
         <!--
             <b> = tag para negrito
@@ -66,31 +68,31 @@
         </figcaption>
     </figure>
 
-    <h1>Data de lançamento</h1>
+    <h2>Data de lançamento</h2>
     <p>
         O Google Home foi anunciado em novembro 2016 nos Estados Unidos e,
         teve lançamentos subsequentes globalmente ao longo de 2017.
     </p>
 
-    <h1>Especificações Técnicas</h1>
+    <h2>Especificações Técnicas</h2>
     <table id="tabelaspec">
         <caption>Tabela Técnica do Google Home <span>Jun/2019</span></caption>
         <tr><td class="ce">Tipo:</td> <td class="cd">Alto falante cilíndrico </td></tr>
         <tr><td class="ce">Altura:</td> <td class="cd">5,62 polegadas (143 milímetros)</td></tr>
         <tr><td class="ce">Diâmetro:</td> <td class="cd">3,79 polegadas (96 milímetros)</td></tr>
     </table>
-    <h1>Como funciona</h1>
+    <h2>Como funciona</h2>
     <p>
         O alto-falante Google Home permite que os usuários falem comandos de voz para interagir com os serviços do 
         Google por meio do assistente pessoal do Google, chamado Google Assistente.
     </p>
 
-    <h1>O que você pode fazer com o Google Home</h1>
+    <h2>O que você pode fazer com o Google Home</h2>
     <p>
         Com um simples comando de voz, realiza tarefas como tocar música, responder suas perguntas, incluir entradas em sua agenda,
         iniciar vídeos em sua televisão e até controlar lâmpadas e eletrodomésticos de sua casa.
     </p>
-    
+    </article>
     </section>
     <aside id="lateral">
         <h1>Outras notícias</h1>
