Configuração pagina Especificações

--- a/Curso HTML5/specs.html
+++ b/Curso HTML5/specs.html
@@ -34,8 +34,37 @@
     </nav>
     </header>
 
-AQUI ENTRA CONTEUDO
+<section id="corpo-full">
+    <article id="noticia-principal">
+        <header id= "cabecalho-artigo">
+            <hgroup>
+                <h3>Home > Especificações</h3>
+                <h1>Especificações do Google Home</h1>
+                <h2>Por Eduarda Vieira</h2>
+                <h3 class="direita">Atualizado em 19/06</h3>
+            </hgroup>
+        </header>
 
+    <h2>Recursos</h2>
+    <p>
+    O alto-falante Google Home permite que os usuários falem comandos de voz para interagir com os serviços do Google por meio do assistente pessoal do Google, chamado Google Assistente. 
+    Um grande número de serviços, internos e de terceiros, são integrados, permitindo aos usuários ouvir música, controlar a reprodução de vídeos ou fotos, ou receber atualizações de notícias totalmente por voz.
+    </p>
+    <p>
+    O dispositivo Google Home também têm suporte integrado para automação residencial, permitindo aos usuários controlar eletrodomésticos inteligentes com sua voz.
+    Vários dispositivos do Google Home podem ser colocados em diferentes quartos em uma casa para a reprodução sincronizada de música. 
+    </p>
+    
+    <h2>Especificações</h2>
+    <table id="tabelaspec">
+            <tr><td class="ce">Fabricante:</td> <td class="cd">Google</td>
+            <tr><td class="ce">Conectividade:</td> <td class="cd">Wi-Fi de banda dupla (2,4/5 GHz) 802.11b/g/n/ac, Bluetooth</td>
+            <tr><td class="ce">Mídia:</td> <td class="cd">Memória Flash</td>
+            <tr><td class="ce">CPU:</td> <td class="cd">Marvell 88DE3006 Armada 1500 Mini Plus dual-core ARM Cortex-A7</td>
+            <tr><td class="ce">Dimensões:</td> <td class="cd">96,4 mm (3,80 pol) de diâmetro, 142,8 mm (5,62 pol) de altura</td>
+        </table>
+    </article>
+</section>
 <footer id="rodape">
         <p>Copyright &copy; 2019 - by Eduarda Vieira </p>
     </footer>
