--- a/Curso HTML5/fotos.html
+++ b/Curso HTML5/fotos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Home</title>
     <link rel="stylesheet" href="_css/estilo.css"/> 
+    <link rel="stylesheet" href="_css/fotos.css"/> 
 </head>
 <script src="_javascript/funcoes.js"></script>
 <body>
@@ -17,7 +18,7 @@
     <!-- A melhor forma de de diminuir uma imagem é pelo editor de imagem (ex: photoshop)
          e não diminuir ela simplesmente no html (pois ela não diminui a quantidade de tamanho)
          assim o site fica mais leve -->
-    <img id="icone" src="imagens/google-home-pequeno.png"/>
+    <img id="icone" src="imagens/fotos.png"/>
 
 <!-- Aqui é criado uma tag de navegação -->
 <nav id="menu">
@@ -34,7 +35,15 @@
     </nav>
     </header>
 
-AQUI ENTRA CONTEUDO
+    <p>
+        Veja a galeria de fotos do Google Home. Basta passar o mouse sobre uma das fotos para ver uma breve descrição.
+    </p>
+
+    <ul id="album-fotos">
+        <li id="foto01"><span>Cores do Google Home</span></li>
+        <li id="foto02"><span>Familia Home</span></li>
+        <li id="foto03"><span>Google Home Mini </span></li>
+    </ul>
 
 <footer id="rodape">
         <p>Copyright &copy; 2019 - by Eduarda Vieira </p>
