--- a/Curso HTML5/specs.html
+++ b/Curso HTML5/specs.html
@@ -17,7 +17,7 @@
     <!-- A melhor forma de de diminuir uma imagem é pelo editor de imagem (ex: photoshop)
          e não diminuir ela simplesmente no html (pois ela não diminui a quantidade de tamanho)
          assim o site fica mais leve -->
-    <img id="icone" src="imagens/google-home-pequeno.png"/>
+    <img id="icone" src="imagens/especificacoes.png"/>
 
 <!-- Aqui é criado uma tag de navegação -->
 <nav id="menu">
@@ -54,7 +54,7 @@
     O dispositivo Google Home também têm suporte integrado para automação residencial, permitindo aos usuários controlar eletrodomésticos inteligentes com sua voz.
     Vários dispositivos do Google Home podem ser colocados em diferentes quartos em uma casa para a reprodução sincronizada de música. 
     </p>
-    
+
     <h2>Especificações</h2>
     <table id="tabelaspec">
             <tr><td class="ce">Fabricante:</td> <td class="cd">Google</td>
