--- a/Curso HTML5/multimidia.html
+++ b/Curso HTML5/multimidia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Home</title>
     <link rel="stylesheet" href="_css/estilo.css"/> 
+    <link rel="stylesheet" href="_css/fotos.css"/>
 </head>
 <script src="_javascript/funcoes.js"></script>
 <body>
@@ -17,7 +18,7 @@
     <!-- A melhor forma de de diminuir uma imagem é pelo editor de imagem (ex: photoshop)
          e não diminuir ela simplesmente no html (pois ela não diminui a quantidade de tamanho)
          assim o site fica mais leve -->
-    <img id="icone" src="imagens/google-home-pequeno.png"/>
+    <img id="icone" src="imagens/multimidia.png"/>
 
 <!-- Aqui é criado uma tag de navegação -->
 <nav id="menu">
@@ -33,6 +34,17 @@
     </ul>
     </nav>
     </header>
+
+    <section id="corpo-full">
+        <article id="noticia-principal">
+            <header id= "cabecalho-artigo">
+                <hgroup>
+                    <h3>Home > Fotos</h3>
+                    <h1>Galeria de imagens do Google Home</h1>
+                    <h2>Por Eduarda Vieira</h2>
+                    <h3 class="direita">Atualizado em 19/06</h3>
+                </hgroup>
+            </header>
 
 AQUI ENTRA CONTEUDO
 
