--- a/Curso HTML5/fotos.html
+++ b/Curso HTML5/fotos.html
@@ -35,6 +35,14 @@
     </nav>
     </header>
 
+        <header id= "cabecalho-artigo">
+            <hgroup>
+                <h3>Home > Fotos</h3>
+                <h1>Veja fotos do Google Home</h1>
+                <h2>Por Eduarda Vieira</h2>
+                <h3 class="direita">Atualizado em 07/06</h3>
+            </hgroup>
+        </header>
     <p>
         Veja a galeria de fotos do Google Home. Basta passar o mouse sobre uma das fotos para ver uma breve descrição.
     </p>
