Arquivos de video adicionados

--- a/Curso HTML5/index.html
+++ b/Curso HTML5/index.html
@@ -99,7 +99,9 @@
     <aside id="lateral">
         <h1>Outras notícias</h1>
         <h2>Vídeo mais recente</h2>
-        AQUI ENTRA UM VIDEO
+        
+        <iframe id="google-homeIndex" width="340" height="240" src="https://www.youtube.com/embed/2_pE3f4lJio" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </aside>
 
     <footer id="rodape">
