--- a/Curso HTML5/multimidia.html
+++ b/Curso HTML5/multimidia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Home</title>
     <link rel="stylesheet" href="_css/estilo.css"/> 
-    <link rel="stylesheet" href="_css/fotos.css"/>
+    <link rel="stylesheet" href="_css/media.css"/>
 </head>
 <script src="_javascript/funcoes.js"></script>
 <body>
@@ -35,22 +35,20 @@
     </nav>
     </header>
 
-    <section id="corpo-full">
-        <article id="noticia-principal">
-            <header id= "cabecalho-artigo">
-                <hgroup>
-                    <h3>Home > Fotos</h3>
-                    <h1>Galeria de imagens do Google Home</h1>
-                    <h2>Por Eduarda Vieira</h2>
-                    <h3 class="direita">Atualizado em 19/06</h3>
-                </hgroup>
-            </header>
+    <header id= "cabecalho-artigo">
+        <hgroup>
+            <h3>Home > Mídia</h3>
+            <h1>Galeria de mídia do Google Home</h1>
+            <h2>Por Eduarda Vieira</h2>
+            <h3 class="direita">Atualizado em 19/06</h3>
+        </hgroup>
+    </header>
 
-AQUI ENTRA CONTEUDO
+    <iframe id="google-homeMedia" width="560" height="315" src="https://www.youtube.com/embed/r0iLfAV0pIg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <footer id="rodape">
-        <p>Copyright &copy; 2019 - by Eduarda Vieira </p>
-    </footer>
+    <p>Copyright &copy; 2019 - by Eduarda Vieira </p>
+</footer>
 </div>
 </body>
 </html>
