--- a/Curso HTML5/fale-conosco.html
+++ b/Curso HTML5/fale-conosco.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Home</title>
     <link rel="stylesheet" href="_css/estilo.css"/> 
+    <link rel="stylesheet" href="_css/form.css"/>
 </head>
 <script src="_javascript/funcoes.js"></script>
 <body>
@@ -17,7 +18,7 @@
     <!-- A melhor forma de de diminuir uma imagem é pelo editor de imagem (ex: photoshop)
          e não diminuir ela simplesmente no html (pois ela não diminui a quantidade de tamanho)
          assim o site fica mais leve -->
-    <img id="icone" src="imagens/google-home-pequeno.png"/>
+    <img id="icone" src="imagens/contato.png"/>
 
 <!-- Aqui é criado uma tag de navegação -->
 <nav id="menu">
@@ -34,7 +35,66 @@
     </nav>
     </header>
 
-AQUI ENTRA CONTEUDO
+    <header id= "cabecalho-artigo">
+        <hgroup>
+            <h3>Fale Conosco > Contato</h3>
+            <h1>Formulário de Contato</h1>
+            <h2>Por Eduarda Vieira</h2>
+            <h3 class="direita">Atualizado em 07/06</h3>
+        </hgroup>
+    </header>
+
+    <form method="POST" id="fContato" action="email@email.com">
+    <fieldset id="usuario">
+        <legend>Identifição do Usuário</legend>
+        <!-- maxlenght: comando que limita caracteres de uma caixa de texto-->
+        <p><label for="cNome">Nome: </label><input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"/></p>
+        <p><label for="cSenha">Senha: </label><input type="password" name="tSenha" id="cSenha"/></p>
+        <p><label for="cEmail">E-mail: </label><input type="email" name="tEmail" id="cEmail"/></p>
+        <fieldset id="sexo">
+            <legend>Sexo: </legend>
+                <input type="radio" name="tSexo" id="cMasc"/><label for="cMasc">Masculino</label>
+                <input type="radio" name="tSexo" id="cFem"/><label for="cFem">Feminino</label>
+        </fieldset>
+        <p><label for="cData">Data de Nascimento: </label><input type="date" name="tData" id="cData"/></p>
+    </fieldset>
+
+    <fieldset id="endereco">
+        <legend>Endereço do Usuário</legend>
+            <p>Logradouro:<input type="text" name="tRua" id="cRua" size="13" maxlength="80" placeholder="Rua, Av, Trav etc"/></p>
+            <p>Número:<input type="number" name="tNum" id="cNum" min="0" max="99999"/></p>
+            <p>Estado:
+                <select name="tEst" id="cEs">
+                    <option selected>Goiás</option>
+                    <option>Rio de Janeiro</option>
+                    <option>São Paulo</option>
+            </p>
+            <p>Cidade:
+                <input type="text" name="tCid" id="cCid" placeholder="Sua Cidade" list="cidades">
+                <datalist id="cidades">
+                    <option value="Goiânia"></option>
+                    <option value="Brasilia"></option>
+                    <option value="Anápolis"></option>
+                </datalist>
+            </p>
+    </fieldset>
+
+    <fieldset id="mensagem">
+        <legend>Mensagem do Usuário</legend>
+        <p>Grau de Urgência: Min <input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2"> Max</p>
+        <p>Mensagem: <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Deixe aqui sua mensagem"></textarea> </p>
+    </fieldset>
+
+    <fieldset id="pedido">
+        <legend>Quero um Google Home</legend>
+        Gostaria de adquirir um Google Home quando disponível
+        Cor:
+        Quantidade:
+        Preço total: R$
+    </fieldset>
+
+        BOTAO ENVIAR
+    </form>
 
 <footer id="rodape">
         <p>Copyright &copy; 2019 - by Eduarda Vieira </p>
